roaring_dart/lib/generated_bindings.dart


  late final _roaring_bitmap_xor_manyPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<roaring_bitmap_t> Function(
                  ffi.Size, ffi.Pointer<ffi.Pointer<roaring_bitmap_t>>)>>(
      'roaring_bitmap_xor_many');
  late final _roaring_bitmap_xor_many = _roaring_bitmap_xor_manyPtr.asFunction<
      ffi.Pointer<roaring_bitmap_t> Function(
          int, ffi.Pointer<ffi.Pointer<roaring_bitmap_t>>)>();

  /// Computes the difference (andnot) between two bitmaps and returns new bitmap.
  /// Caller is responsible for freeing the result.
  ffi.Pointer<roaring_bitmap_t> roaring_bitmap_andnot(
    ffi.Pointer<roaring_bitmap_t> r1,
    ffi.Pointer<roaring_bitmap_t> r2,
  ) {
    return _roaring_bitmap_andnot(
      r1,
      r2,
    );
  }

  late final _roaring_bitmap_andnotPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<roaring_bitmap_t> Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Pointer<roaring_bitmap_t>)>>('roaring_bitmap_andnot');
  late final _roaring_bitmap_andnot = _roaring_bitmap_andnotPtr.asFunction<
      ffi.Pointer<roaring_bitmap_t> Function(
          ffi.Pointer<roaring_bitmap_t>, ffi.Pointer<roaring_bitmap_t>)>();

  /// Inplace version of roaring_bitmap_andnot, modifies r1, r1 != r2.
  void roaring_bitmap_andnot_inplace(
    ffi.Pointer<roaring_bitmap_t> r1,
    ffi.Pointer<roaring_bitmap_t> r2,
  ) {
    return _roaring_bitmap_andnot_inplace(
      r1,
      r2,
    );
  }

  late final _roaring_bitmap_andnot_inplacePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Pointer<roaring_bitmap_t>)>>('roaring_bitmap_andnot_inplace');
  late final _roaring_bitmap_andnot_inplace =
      _roaring_bitmap_andnot_inplacePtr.asFunction<
          void Function(
              ffi.Pointer<roaring_bitmap_t>, ffi.Pointer<roaring_bitmap_t>)>();

  /// Frees the memory.
  void roaring_bitmap_free(
    ffi.Pointer<roaring_bitmap_t> r,
  ) {
    return _roaring_bitmap_free(
      r,
    );
  }

  late final _roaring_bitmap_freePtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<roaring_bitmap_t>)>>(
      'roaring_bitmap_free');
  late final _roaring_bitmap_free = _roaring_bitmap_freePtr
      .asFunction<void Function(ffi.Pointer<roaring_bitmap_t>)>();

  /// Add an item, using context from a previous insert for speed optimization.
  ///
  /// `context` will be used to store information between calls to make bulk
  /// operations faster. `*context` should be zero-initialized before the first
  /// call to this function.
  ///
  /// Modifying the bitmap in any way (other than `-bulk` suffixed functions)
  /// will invalidate the stored context, calling this function with a non-zero
  /// context after doing any modification invokes undefined behavior.
  ///
  /// In order to exploit this optimization, the caller should call this function
  /// with values with the same "key" (high 16 bits of the value) consecutively.
  void roaring_bitmap_add_bulk(
    ffi.Pointer<roaring_bitmap_t> r,
    ffi.Pointer<roaring_bulk_context_t> context,
    int val,
  ) {
    return _roaring_bitmap_add_bulk(
      r,
      context,
      val,
    );
  }

  late final _roaring_bitmap_add_bulkPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<roaring_bitmap_t>,
              ffi.Pointer<roaring_bulk_context_t>,
              ffi.Uint32)>>('roaring_bitmap_add_bulk');
  late final _roaring_bitmap_add_bulk = _roaring_bitmap_add_bulkPtr.asFunction<
      void Function(ffi.Pointer<roaring_bitmap_t>,
          ffi.Pointer<roaring_bulk_context_t>, int)>();

  /// Add value n_args from pointer vals, faster than repeatedly calling
  /// `roaring_bitmap_add()`
  ///
  /// In order to exploit this optimization, the caller should attempt to keep
  /// values with the same "key" (high 16 bits of the value) as consecutive
  /// elements in `vals`
  void roaring_bitmap_add_many(
    ffi.Pointer<roaring_bitmap_t> r,
    int n_args,
    ffi.Pointer<ffi.Uint32> vals,
  ) {
    return _roaring_bitmap_add_many(
      r,
      n_args,
      vals,
    );
  }

  late final _roaring_bitmap_add_manyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<roaring_bitmap_t>, ffi.Size,
              ffi.Pointer<ffi.Uint32>)>>('roaring_bitmap_add_many');
  late final _roaring_bitmap_add_many = _roaring_bitmap_add_manyPtr.asFunction<
      void Function(
          ffi.Pointer<roaring_bitmap_t>, int, ffi.Pointer<ffi.Uint32>)>();

  /// Add value x
  void roaring_bitmap_add(
    ffi.Pointer<roaring_bitmap_t> r,
    int x,
  ) {
    return _roaring_bitmap_add(
      r,
      x,
    );
  }

  late final _roaring_bitmap_addPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Uint32)>>('roaring_bitmap_add');
  late final _roaring_bitmap_add = _roaring_bitmap_addPtr
      .asFunction<void Function(ffi.Pointer<roaring_bitmap_t>, int)>();

  /// Add value x
  /// Returns true if a new value was added, false if the value already existed.
  bool roaring_bitmap_add_checked(
    ffi.Pointer<roaring_bitmap_t> r,
    int x,
  ) {
    return _roaring_bitmap_add_checked(
      r,
      x,
    );
  }

  late final _roaring_bitmap_add_checkedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Uint32)>>('roaring_bitmap_add_checked');
  late final _roaring_bitmap_add_checked = _roaring_bitmap_add_checkedPtr
      .asFunction<bool Function(ffi.Pointer<roaring_bitmap_t>, int)>();

  /// Add all values in range [min, max]
  void roaring_bitmap_add_range_closed(
    ffi.Pointer<roaring_bitmap_t> r,
    int min,
    int max,
  ) {
    return _roaring_bitmap_add_range_closed(
      r,
      min,
      max,
    );
  }

  late final _roaring_bitmap_add_range_closedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<roaring_bitmap_t>, ffi.Uint32,
              ffi.Uint32)>>('roaring_bitmap_add_range_closed');
  late final _roaring_bitmap_add_range_closed =
      _roaring_bitmap_add_range_closedPtr
          .asFunction<void Function(ffi.Pointer<roaring_bitmap_t>, int, int)>();

  /// Add all values in range [min, max)
  void roaring_bitmap_add_range(
    ffi.Pointer<roaring_bitmap_t> r,
    int min,
    int max,
  ) {
    return _roaring_bitmap_add_range(
      r,
      min,
      max,
    );
  }

  late final _roaring_bitmap_add_rangePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<roaring_bitmap_t>, ffi.Uint64,
              ffi.Uint64)>>('roaring_bitmap_add_range');
  late final _roaring_bitmap_add_range = _roaring_bitmap_add_rangePtr
      .asFunction<void Function(ffi.Pointer<roaring_bitmap_t>, int, int)>();

  /// Remove value x
  void roaring_bitmap_remove(
    ffi.Pointer<roaring_bitmap_t> r,
    int x,
  ) {
    return _roaring_bitmap_remove(
      r,
      x,
    );
  }

  late final _roaring_bitmap_removePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Uint32)>>('roaring_bitmap_remove');
  late final _roaring_bitmap_remove = _roaring_bitmap_removePtr
      .asFunction<void Function(ffi.Pointer<roaring_bitmap_t>, int)>();

  /// Remove all values in range [min, max]
  void roaring_bitmap_remove_range_closed(
    ffi.Pointer<roaring_bitmap_t> r,
    int min,
    int max,
  ) {
    return _roaring_bitmap_remove_range_closed(
      r,
      min,
      max,
    );
  }

  late final _roaring_bitmap_remove_range_closedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<roaring_bitmap_t>, ffi.Uint32,
              ffi.Uint32)>>('roaring_bitmap_remove_range_closed');
  late final _roaring_bitmap_remove_range_closed =
      _roaring_bitmap_remove_range_closedPtr
          .asFunction<void Function(ffi.Pointer<roaring_bitmap_t>, int, int)>();

  /// Remove all values in range [min, max)
  void roaring_bitmap_remove_range(
    ffi.Pointer<roaring_bitmap_t> r,
    int min,
    int max,
  ) {
    return _roaring_bitmap_remove_range(
      r,
      min,
      max,
    );
  }

  late final _roaring_bitmap_remove_rangePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<roaring_bitmap_t>, ffi.Uint64,
              ffi.Uint64)>>('roaring_bitmap_remove_range');
  late final _roaring_bitmap_remove_range = _roaring_bitmap_remove_rangePtr
      .asFunction<void Function(ffi.Pointer<roaring_bitmap_t>, int, int)>();

  /// Remove multiple values
  void roaring_bitmap_remove_many(
    ffi.Pointer<roaring_bitmap_t> r,
    int n_args,
    ffi.Pointer<ffi.Uint32> vals,
  ) {
    return _roaring_bitmap_remove_many(
      r,
      n_args,
      vals,
    );
  }

  late final _roaring_bitmap_remove_manyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<roaring_bitmap_t>, ffi.Size,
              ffi.Pointer<ffi.Uint32>)>>('roaring_bitmap_remove_many');
  late final _roaring_bitmap_remove_many =
      _roaring_bitmap_remove_manyPtr.asFunction<
          void Function(
              ffi.Pointer<roaring_bitmap_t>, int, ffi.Pointer<ffi.Uint32>)>();

  /// Remove value x
  /// Returns true if a new value was removed, false if the value was not existing.
  bool roaring_bitmap_remove_checked(
    ffi.Pointer<roaring_bitmap_t> r,
    int x,
  ) {
    return _roaring_bitmap_remove_checked(
      r,
      x,
    );
  }

  late final _roaring_bitmap_remove_checkedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Uint32)>>('roaring_bitmap_remove_checked');
  late final _roaring_bitmap_remove_checked = _roaring_bitmap_remove_checkedPtr
      .asFunction<bool Function(ffi.Pointer<roaring_bitmap_t>, int)>();

  /// Check if value is present
  bool roaring_bitmap_contains(
    ffi.Pointer<roaring_bitmap_t> r,
    int val,
  ) {
    return _roaring_bitmap_contains(
      r,
      val,
    );
  }

  late final _roaring_bitmap_containsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Uint32)>>('roaring_bitmap_contains');
  late final _roaring_bitmap_contains = _roaring_bitmap_containsPtr
      .asFunction<bool Function(ffi.Pointer<roaring_bitmap_t>, int)>();

  /// Check whether a range of values from range_start (included)
  /// to range_end (excluded) is present
  bool roaring_bitmap_contains_range(
    ffi.Pointer<roaring_bitmap_t> r,
    int range_start,
    int range_end,
  ) {
    return _roaring_bitmap_contains_range(
      r,
      range_start,
      range_end,
    );
  }

  late final _roaring_bitmap_contains_rangePtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<roaring_bitmap_t>, ffi.Uint64,
              ffi.Uint64)>>('roaring_bitmap_contains_range');
  late final _roaring_bitmap_contains_range = _roaring_bitmap_contains_rangePtr
      .asFunction<bool Function(ffi.Pointer<roaring_bitmap_t>, int, int)>();
